--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,88 @@
+# Jarvis IA V2 - Environment Variables Configuration
+# Copy this file to .env and fill in your actual values
+
+# ============================================================================
+# API KEYS (Optional - only needed if using API models)
+# ============================================================================
+
+# OpenAI API Key (for GPT-4o-mini)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Anthropic API Key (for Claude-3.5-Sonnet)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Google API Key (for Gemini-2.0-Flash-Thinking)
 GOOGLE_API_KEY=your_google_api_key_here
 
+# DeepInfra API Key (for DeepSeek models via API)
 DEEPINFRA_API_KEY=your_deepinfra_api_key_here
 
+# HuggingFace Token (for downloading models)
 HUGGINGFACE_TOKEN=your_huggingface_token_here
 
-GOOGLE_CSE_ID=your_google_cse_id_here
-
-PYTHONPATH=${PYTHONPATH}:/path/to/project
-
+# Wolfram Alpha App ID (for advanced math)
 WOLFRAM_APP_ID=your_wolfram_app_id_here
 
+# Google Custom Search Engine ID
+GOOGLE_CSE_ID=your_google_cse_id_here
+
+# News API Key
 NEWS_API_KEY=your_news_api_key_here
+
+# ============================================================================
+# SYSTEM PATHS
+# ============================================================================
+
+# Python path (adjust to your project location)
+PYTHONPATH=${PYTHONPATH}:/path/to/project
+
+# ============================================================================
+# SYSTEM CONFIGURATION
+# ============================================================================
+
+# Log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
+LOG_LEVEL=INFO
+
+# Enable GPU monitoring (true/false)
+ENABLE_GPU_MONITORING=true
+
+# Maximum errors before shutdown
+MAX_ERRORS=5
+
+# VRAM buffer in MB
+VRAM_BUFFER_MB=500
+
+# ============================================================================
+# AUDIO CONFIGURATION
+# ============================================================================
+
+# TTS Language (es, en, fr, etc.)
+TTS_LANGUAGE=es
+
+# Enable voice activation (true/false)
+ENABLE_VOICE=true
+
+# Audio device index (-1 for default)
+AUDIO_DEVICE_INDEX=-1
+
+# ============================================================================
+# ADVANCED SETTINGS
+# ============================================================================
+
+# Enable metrics tracking
+ENABLE_METRICS=true
+
+# Enable circuit breaker for APIs
+ENABLE_CIRCUIT_BREAKER=true
+
+# Enable input validation
+ENABLE_INPUT_VALIDATION=true
+
+# Debug mode
+DEBUG_MODE=false
+
+# ============================================================================
+# NOTES
+# ============================================================================
+# - API keys are OPTIONAL for local-only mode
+# - See INSTALL.md for detailed setup instructions
